crates/tinyone_core/tests/programs/fail_compile/008_import_after_statement.to
print 1
import "math.to" as math
